2.4-12-fix align table header

--- a/css/style.css
+++ b/css/style.css
@@ -180,15 +180,15 @@ body {
 
 .movie-table__head-cell {
   color: white;
-  text-align: center;
+  text-align: left;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.3;
 }
 
 .movie-table__link {
   text-decoration: none;
   color: #ffffff;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.3;
 }
 
 .movie-table__arrow {
